# OCCT-demo

./: CMakeLists.txt  main.cpp  main3d.cpp  parallel_projection.cpp
testfile/: DEMO_OCCT.pw  circle.cgns  circle.iges
